--- a/index.html
+++ b/index.html
@@ -67,39 +67,39 @@
     </div>
 
     <footer id="contato-container">
-        <div style="width: 35rem">
-            <p style="color: rgba(156, 0, 213, 0.758)">TODOS OS DIREITOS RESERVADOS À EMPRESA</p>
-            <div class="logo" onclick="logoClicked(event)">
-                <a href="/index.html"><img src="/assets/imgs/logo-branca.png" alt="Logo HitMe"></a>
-                <a href="/index.html" style="text-decoration: none"><h1>HitMe</h1></a>
-                <a href="/index.html"><img src="/assets/imgs/copyright-icon.png" alt="Copyright Icon" style="height: 0.8rem; margin-left: 0.6rem; margin-bottom: 1rem"></a>
+            <div style="width: 35rem">
+                <p style="color: rgba(156, 0, 213, 0.758)">TODOS OS DIREITOS RESERVADOS À EMPRESA</p>
+                <div class="logo" onclick="logoClicked(event)">
+                    <a href="/index.html"><img src="/assets/imgs/logo-branca.png" alt="Logo HitMe"></a>
+                    <a href="/index.html" style="text-decoration: none"><h1>HitMe</h1></a>
+                    <a href="/index.html"><img src="/assets/imgs/copyright-icon.png" alt="Símbolo de copyright" style="height: 0.8rem; margin-left: 0.6rem; margin-bottom: 1rem"></a>
+                </div>
+                <p>Aplicação web desenvolvida pelos estudantes Giulia Rozza Piai, João Eduardo Cappellari Trevisol e Sofia Sousa Lindner.</p>
             </div>
-            <p>Aplicação web desenvolvida pelos estudantes Giulia Rozza Piai, João Eduardo Cappellari Trevisol e Sofia Sousa Lindner.</p>
-        </div>
-        <div>
-            <h2>CONTATO</h2>
-            <p class="contato-option">
-                <img src="/assets/imgs/whatsapp-icon.png">+55 (47) 99999-9999
-            </p>
-            <p class="contato-option">
-                <img src="/assets/imgs/mail-icon.png">
-                <a href="mailto:hitmeatendimento@gmail.com?subject='">hitmeatendimento@gmail.com</a>
-            </p>
-            <br><br>
-            <h2>SUPORTE E OUVIDORIA</h2>
-            <p class="contato-option">
-                <img src="/assets/imgs/mail-icon.png">
-                <a href="mailto:hitmesuporte@gmail.com?subject='">hitmesuporte@gmail.com</a>
-            </p>
-        </div>
-        <div>
-            <h2>SOCIAL</h2>
-            <div style="display: flex; margin-inline: 0">
-                <img src="/assets/imgs/twitter-icon.png" class="contato-option" style="height: 2.8rem">
-                <img src="/assets/imgs/facebook-icon.png" class="contato-option">
-                <img src="/assets/imgs/instagram-icon.png" class="contato-option">
+            <div>
+                <h2>CONTATO</h2>
+                <p class="contato-option">
+                    <img src="/assets/imgs/whatsapp-icon.png" alt="Ícone do WhatsApp">+55 (47) 99999-9999
+                </p>
+                <p class="contato-option">
+                    <img src="/assets/imgs/mail-icon.png" alt="Carta">
+                    <a href="mailto:hitmeatendimento@gmail.com?subject='">hitmeatendimento@gmail.com</a>
+                </p>
+                <br><br>
+                <h2>SUPORTE E OUVIDORIA</h2>
+                <p class="contato-option">
+                    <img src="/assets/imgs/mail-icon.png" alt="Carta">
+                    <a href="mailto:hitmesuporte@gmail.com?subject='">hitmesuporte@gmail.com</a>
+                </p>
             </div>
-        </div>
-    </footer>
+            <div>
+                <h2>SOCIAL</h2>
+                <div style="display: flex; margin-inline: 0">
+                    <img src="/assets/imgs/twitter-icon.png" class="contato-option" style="height: 2.8rem" alt="Ícone do Twitter">
+                    <img src="/assets/imgs/facebook-icon.png" class="contato-option" alt="Ícone do Facebook">
+                    <img src="/assets/imgs/instagram-icon.png" class="contato-option" alt="Ícone do Instagram">
+                </div>
+            </div>
+        </footer>
 </body>
 </html>
