--- a/public/home.html
+++ b/public/home.html
@@ -24,30 +24,30 @@
             <br><hr style="opacity: 0.4;">
             <ul id="home-menu">
                 <li class="home-menu-item">
-                    <a href="/index.html"><img src="/assets/imgs/logout-icon.png"><h2>Sair</h2></a>
+                    <a href="/index.html"><img src="/assets/imgs/logout-icon.png" alt="Ícone de logout"><h2>Sair</h2></a>
                 </li>
                 <li class="home-menu-item">
-                    <a href="/public/home.html"><img src="/assets/imgs/create-icon.png"><h2>Criar</h2></a>
+                    <a href="/public/home.html"><img src="/assets/imgs/create-icon.png" alt="Nota de música com símbolo de adição"><h2>Criar</h2></a>
                 </li>
                 <li class="home-menu-item">
-                    <a href=""><img src="/assets/imgs/library-icon.png"><h2>Biblioteca</h2></a>
+                    <a href=""><img src="/assets/imgs/library-icon.png" alt="Livro com capa de som"><h2>Biblioteca</h2></a>
                 </li>
             </ul>
         </nav>
 
         <div id="user-bar">
-            <img id="user-img" src="/assets/imgs/user-icon.png">
+            <img id="user-img" src="/assets/imgs/user-icon.png" alt="Perfil do usuário">
             <h2 id="username">User</h2>
             <button id="btn-logout" onclick="window.location.href='/index.html'">Sair</button>
         </div>
 
         <div style="display:flex">
             <form id="barra-pesquisa">
-                <img onclick="searchMusicArtist()" src="/assets/imgs/search-icon.png">
+                <img onclick="searchMusicArtist()" src="/assets/imgs/search-icon.png" alt="Lupa de pesquisa">
                 <input id="input-pesquisa" type="search" placeholder="Pesquise pela música ou artista">
             </form>
             <button id="btn-pesquisar" onclick="searchMusicArtist()">Pesquisar</button>
-            <img id="btn-reload" src="/assets/imgs/reload-icon.png">
+            <img id="btn-reload" src="/assets/imgs/reload-icon.png" alt="Ícone de reload">
         </div>
 
         <div id="home-content">
@@ -85,7 +85,7 @@
                             <p class="mduracao">03:48</p>
                             <button type="checkbox" class="btn-selecao"></button>
                         </div>
-                        <img class="mcapa" src="/assets/capas-musicas/0music.jpg">
+                        <img class="mcapa" src="/assets/capas-musicas/0music.jpg" alt="Sobre fundo marrom, mulher com cabeça apoiada sobre ombro de outra mulher">
                         <h4 class="mnome">we can't be friends (wait for your love)</h4>
                         <p class="mcantor">Ariana Grande</p>
                     </div>
@@ -94,7 +94,7 @@
                             <p class="mduracao">02:39</p>
                             <button type="checkbox" class="btn-selecao"></button>
                         </div>
-                        <img class="mcapa" src="/assets/capas-musicas/1music.jpg">
+                        <img class="mcapa" src="/assets/capas-musicas/1music.jpg" alt="Homem segurando objeto circular sobre fundo preto">
                         <h4 class="mnome">End of Beginning</h4>
                         <p class="mcantor">Djo</p>
                     </div>
@@ -103,7 +103,7 @@
                             <p class="mduracao">04:24</p>
                             <button type="checkbox" class="btn-selecao"></button>
                         </div>
-                        <img class="mcapa" src="/assets/capas-musicas/2music.jpg">
+                        <img class="mcapa" src="/assets/capas-musicas/2music.jpg" alt="Homem com jaqueta de couro e máscara branca">
                         <h4 class="mnome">CARNIVAL</h4>
                         <p class="mcantor">Kanye West</p>
                     </div>
@@ -112,7 +112,7 @@
                             <p class="mduracao">03:42</p>
                             <button type="checkbox" class="btn-selecao"></button>
                         </div>
-                        <img class="mcapa" src="/assets/capas-musicas/3music.jpg">
+                        <img class="mcapa" src="/assets/capas-musicas/3music.jpg" alt="Mulher com rabo de cavalo sobre fundo verde claro">
                         <h4 class="mnome">What Was I Made For? [From The Motion Picture "Barbie"]</h4>
                         <p class="mcantor">Billie Eilish</p>
                     </div>
@@ -121,7 +121,7 @@
                             <p class="mduracao">02:58</p>
                             <button type="checkbox" class="btn-selecao"></button>
                         </div>
-                        <img class="mcapa" src="/assets/capas-musicas/4music.jpg">
+                        <img class="mcapa" src="/assets/capas-musicas/4music.jpg" alt="Mulher loira em frente a céu com nuvens cor-de-rosa">
                         <h4 class="mnome">Cruel Summer</h4>
                         <p class="mcantor">Taylor Swift</p>
                     </div>
@@ -130,7 +130,7 @@
                             <p class="mduracao">02:11</p>
                             <button type="checkbox" class="btn-selecao"></button>
                         </div>
-                        <img class="mcapa" src="/assets/capas-musicas/5music.jpg">
+                        <img class="mcapa" src="/assets/capas-musicas/5music.jpg" alt="Foto em preto e branco de mulher deitada sobre a cama">
                         <h4 class="mnome">greedy</h4>
                         <p class="mcantor">Tate McRae</p>
                     </div>
@@ -139,7 +139,7 @@
                             <p class="mduracao">03:50</p>
                             <button type="checkbox" class="btn-selecao"></button>
                         </div>
-                        <img class="mcapa" src="/assets/capas-musicas/6music.jpg">
+                        <img class="mcapa" src="/assets/capas-musicas/6music.jpg" alt="Texto em amarelo sobre fundo vermelho e homem em azul">
                         <h4 class="mnome">Starboy</h4>
                         <p class="mcantor">The Weeknd, Daft Punk</p>
                     </div>
@@ -148,7 +148,7 @@
                             <p class="mduracao">03:39</p>
                             <button type="checkbox" class="btn-selecao"></button>
                         </div>
-                        <img class="mcapa" src="/assets/capas-musicas/7music.jpg">
+                        <img class="mcapa" src="/assets/capas-musicas/7music.jpg" alt="Mulher com mão sobre os lábios e deitada sobre fundo roxo">
                         <h4 class="mnome">vampire</h4>
                         <p class="mcantor">Olivia Rodrigo</p>
                     </div>
@@ -157,7 +157,7 @@
                             <p class="mduracao">03:03</p>
                             <button type="checkbox" class="btn-selecao"></button>
                         </div>
-                        <img class="mcapa" src="/assets/capas-musicas/8music.jpg">
+                        <img class="mcapa" src="/assets/capas-musicas/8music.jpg" alt="Ondas sonoras em formato de ampulheta sobre fundo preto">
                         <h4 class="mnome">I Wanna Be Yours</h4>
                         <p class="mcantor">Artic Monkeys</p>
                     </div>
@@ -166,7 +166,7 @@
                             <p class="mduracao">03:06</p>
                             <button type="checkbox" class="btn-selecao"></button>
                         </div>
-                        <img class="mcapa" src="/assets/capas-musicas/9music.jpg">
+                        <img class="mcapa" src="/assets/capas-musicas/9music.jpg" alt="Elementos desenhados sobre fundo branco">
                         <h4 class="mnome">Saturn</h4>
                         <p class="mcantor">SZA</p>
                     </div>
@@ -175,7 +175,7 @@
                             <p class="mduracao">02:17</p>
                             <button type="checkbox" class="btn-selecao"></button>
                         </div>
-                        <img class="mcapa" src="/assets/capas-musicas/10music.jpg">
+                        <img class="mcapa" src="/assets/capas-musicas/10music.jpg" alt="Foto de pessoa sentada em preto e branco com borda laranja-claro">
                         <h4 class="mnome">My Love Mine All Mine</h4>
                         <p class="mcantor">Mitski</p>
                     </div>
@@ -184,7 +184,7 @@
                             <p class="mduracao">03:05</p>
                             <button type="checkbox" class="btn-selecao"></button>
                         </div>
-                        <img class="mcapa" src="/assets/capas-musicas/11music.jpg">
+                        <img class="mcapa" src="/assets/capas-musicas/11music.jpg" alt="Mulher lambendo o próprio reflexo no espelho">
                         <h4 class="mnome">Houdini</h4>
                         <p class="mcantor">Dua Lipa</p>
                     </div>
@@ -193,7 +193,7 @@
                             <p class="mduracao">03:53</p>
                             <button type="checkbox" class="btn-selecao"></button>
                         </div>
-                        <img class="mcapa" src="/assets/capas-musicas/12music.jpg">
+                        <img class="mcapa" src="/assets/capas-musicas/12music.jpg" alt="Mulher de chapéu e roupas prateadas sobre fundo marrom">
                         <h4 class="mnome">TEXAS HOLD 'EM</h4>
                         <p class="mcantor">Beyoncé</p>
                     </div>
@@ -202,7 +202,7 @@
                             <p class="mduracao">03:45</p>
                             <button type="checkbox" class="btn-selecao"></button>
                         </div>
-                        <img class="mcapa" src="/assets/capas-musicas/13music.jpg">
+                        <img class="mcapa" src="/assets/capas-musicas/13music.jpg" alt="Sobre fundo branco, homem de vermelho sentado em cadeira">
                         <h4 class="mnome">24K Magic</h4>
                         <p class="mcantor">Bruno Mars</p>
                     </div>
@@ -211,7 +211,7 @@
                             <p class="mduracao">07:13</p>
                             <button type="checkbox" class="btn-selecao"></button>
                         </div>
-                        <img class="mcapa" src="/assets/capas-musicas/14music.jpg">
+                        <img class="mcapa" src="/assets/capas-musicas/14music.jpg" alt="Mulher com cabeça inclinada em preto e branco">
                         <h4 class="mnome">A&W</h4>
                         <p class="mcantor">Lana Del Rey</p>
                     </div>
@@ -225,32 +225,32 @@
                 <div class="logo" onclick="logoClicked(event)">
                     <a href="/index.html"><img src="/assets/imgs/logo-branca.png" alt="Logo HitMe"></a>
                     <a href="/index.html" style="text-decoration: none"><h1>HitMe</h1></a>
-                    <a href="/index.html"><img src="/assets/imgs/copyright-icon.png" alt="Copyright Icon" style="height: 0.8rem; margin-left: 0.6rem; margin-bottom: 1rem"></a>
+                    <a href="/index.html"><img src="/assets/imgs/copyright-icon.png" alt="Símbolo de copyright" style="height: 0.8rem; margin-left: 0.6rem; margin-bottom: 1rem"></a>
                 </div>
                 <p>Aplicação web desenvolvida pelos estudantes Giulia Rozza Piai, João Eduardo Cappellari Trevisol e Sofia Sousa Lindner.</p>
             </div>
             <div>
                 <h2>CONTATO</h2>
                 <p class="contato-option">
-                    <img src="/assets/imgs/whatsapp-icon.png">+55 (47) 99999-9999
+                    <img src="/assets/imgs/whatsapp-icon.png" alt="Ícone do WhatsApp">+55 (47) 99999-9999
                 </p>
                 <p class="contato-option">
-                    <img src="/assets/imgs/mail-icon.png">
+                    <img src="/assets/imgs/mail-icon.png" alt="Carta">
                     <a href="mailto:hitmeatendimento@gmail.com?subject='">hitmeatendimento@gmail.com</a>
                 </p>
                 <br><br>
                 <h2>SUPORTE E OUVIDORIA</h2>
                 <p class="contato-option">
-                    <img src="/assets/imgs/mail-icon.png">
+                    <img src="/assets/imgs/mail-icon.png" alt="Carta">
                     <a href="mailto:hitmesuporte@gmail.com?subject='">hitmesuporte@gmail.com</a>
                 </p>
             </div>
             <div>
                 <h2>SOCIAL</h2>
                 <div style="display: flex; margin-inline: 0">
-                    <img src="/assets/imgs/twitter-icon.png" class="contato-option" style="height: 2.8rem">
-                    <img src="/assets/imgs/facebook-icon.png" class="contato-option">
-                    <img src="/assets/imgs/instagram-icon.png" class="contato-option">
+                    <img src="/assets/imgs/twitter-icon.png" class="contato-option" style="height: 2.8rem" alt="Ícone do Twitter">
+                    <img src="/assets/imgs/facebook-icon.png" class="contato-option" alt="Ícone do Facebook">
+                    <img src="/assets/imgs/instagram-icon.png" class="contato-option" alt="Ícone do Instagram">
                 </div>
             </div>
         </footer>
