search by enter

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                         <label for="fusername">Usuário:</label>
                         <input type="text" id="fusername" name="fusername" placeholder="Nome de usuário" style="margin-left: 2rem;"><br><br>
                         <label for="fsenha">Senha:</label>
-                        <input type="password" id="fsenha" nome="fsenha" placeholder="Senha de 6 a 8 dígitos" style="margin-left: 2.7rem"><br><br>
+                        <input type="password" id="fsenha" nome="fsenha" placeholder="Senha" style="margin-left: 2.7rem"><br><br>
                         <div style="display: flex; justify-content: space-between">
                             <div>
                                 <label for="checkbox-show-password" class="lbl-checkbox">
